--- a/src/main/resources/templates/success/successful.html
+++ b/src/main/resources/templates/success/successful.html
@@ -6,10 +6,9 @@
         <title>Successfully!</title>
 
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
+            rel="shortcut icon"
+            href="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-and-shapes-7/177800/338-512.png"
+            type="image/x-icon"
         />
 
         <style>
@@ -93,14 +92,156 @@
             }
         </style>
 
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+        />
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
         ></script>
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <!-- Font Awesome -->
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+            rel="stylesheet"
+        />
+        <!-- Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+            rel="stylesheet"
+        />
+        <!-- MDB -->
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
+            rel="stylesheet"
+        />
+
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="bg-[#e5e5e5]">
+        <!-- Modal -->
+        <div
+            class="modal fade"
+            id="exampleModal"
+            data-bs-backdrop="static"
+            data-bs-toggle="modal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container h-100">
+                        <div
+                            class="row d-flex justify-content-center align-items-center h-100"
+                        >
+                            <!--                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">-->
+                            <div class="card shadow-2-strong">
+                                <form action="/doLogin" method="post">
+                                    <div
+                                        class="card-body py-3 px-3 text-center"
+                                    >
+                                        <div class="flex flex-col items-center">
+                                            <img
+                                                class="w-[80px]"
+                                                src="https://cdn-icons-png.flaticon.com/512/1974/1974031.png"
+                                            />
+                                            <h3 class="mt-2 mb-5">Sign in</h3>
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            <input
+                                                type="email"
+                                                id="typeEmailX-2"
+                                                class="form-control form-control-lg"
+                                                name="email"
+                                            />
+                                            <label
+                                                class="form-label"
+                                                for="typeEmailX-2"
+                                                >Email</label
+                                            >
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            <input
+                                                type="password"
+                                                id="typePasswordX-2"
+                                                class="form-control form-control-lg"
+                                                name="password"
+                                            />
+                                            <label
+                                                class="form-label"
+                                                for="typePasswordX-2"
+                                                >Password</label
+                                            >
+                                        </div>
+
+                                        <!-- Checkbox -->
+                                        <div
+                                            class="form-check d-flex justify-content-start mb-4"
+                                        >
+                                            <input
+                                                class="form-check-input"
+                                                type="checkbox"
+                                                value=""
+                                                id="form1Example3"
+                                            />
+                                            <label
+                                                class="form-check-label"
+                                                for="form1Example3"
+                                            >
+                                                Remember password
+                                            </label>
+                                        </div>
+
+                                        <button
+                                            class="btn btn-primary btn-lg btn-block bg-[#3b5998]"
+                                            type="submit"
+                                        >
+                                            Login
+                                        </button>
+
+                                        <hr class="my-4" />
+
+                                        <button
+                                            class="btn btn-lg btn-block btn-primary"
+                                            style="background-color: #dd4b39"
+                                            type="submit"
+                                        >
+                                            <i class="fab fa-google me-2"></i>
+                                            Sign in with google
+                                        </button>
+                                        <button
+                                            class="btn btn-lg btn-block btn-primary mb-2"
+                                            style="background-color: #3b5998"
+                                            type="submit"
+                                        >
+                                            <i
+                                                class="fab fa-facebook-f me-2"
+                                            ></i
+                                            >Sign in with facebook
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Header -->
         <header class="p-2 bg-[#003C71] text-white">
             <div class="max-w-[1200px] mx-auto">
@@ -280,3 +421,7 @@
         </div>
     </body>
 </html>
+<script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"
+></script>
