fix price render in all pages

--- a/src/main/resources/templates/frontend/booking.html
+++ b/src/main/resources/templates/frontend/booking.html
@@ -489,7 +489,7 @@
                             </p>
                             <p
                                 class="text-[22px] font-semibold text-[#26bed6]"
-                                th:text="${roomDto.getPrice()} + ' VND'"
+                                th:text="*{#numbers.formatDecimal(roomDto.getPrice(),3,'POINT',0,'COMMA')} + ' VND'"
                             >
                                 5.766.000 VND
                             </p>
